# scaffold

./: CLAUDE.md
DwarfMMO/: CMakeLists.txt  README.md
DwarfMMO/src/: main.cpp
DwarfMMO/src/client/: input.cpp  input.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
DwarfMMO/src/game/: entity.cpp  entity.hpp  player.cpp  player.hpp  world.cpp  world.hpp
DwarfMMO/src/network/: client.cpp  client.hpp  packet.cpp  packet.hpp
DwarfMMO_server/: CMakeLists.txt  README.md
DwarfMMO_server/src/: main.cpp
DwarfMMO_server/src/game/: entity.cpp  entity.hpp  player.cpp  player.hpp  world.cpp  world.hpp
DwarfMMO_server/src/network/: packet.cpp
DwarfMMO_server/src/server/: client_session.cpp  client_session.hpp  config.cpp  config.hpp  server.cpp  server.hpp
